# smart-saw

./: .env  .env.example  .gitattributes  .gitignore  .gitkeep  README.md  api_test.py  camera2.py  camera_save_frames.py  data_logger.py  environment.yml  highspeed_reader.py  highspeed_setter.py  pyproject.toml  requirements.txt  run.bat  run.py  sample.env  setup-autostart.sh  vibration_test.py
.gsd/: DECISIONS.md  PROJECT.md  REQUIREMENTS.md  STATE.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v2.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-ROADMAP.md  v1.1-ROADMAP.md  v1.2-ROADMAP.md  v1.3-ROADMAP.md  v1.4-ROADMAP.md  v1.5-ROADMAP.md  v1.6-REQUIREMENTS.md  v1.6-ROADMAP.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v2.1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: config.yaml
data/models/: .gitkeep  Bagging_dataset_v17_20250509.pkl
data/mqtt_offline/: mqtt_offline_20260106_144912.jsonl  mqtt_offline_20260106_145020.jsonl  (+1 more)
real_ldc/: modelB4.py
src/: __init__.py  fuzzy_visualizer.py  main.py  requirements.txt  run_server.py
tests/: test_camera_results_store.py  test_camera_service.py  test_detection_worker.py  test_health_calculator.py  test_ldc_worker.py  test_machine_control_auto_cutting.py  test_main_controller_integration.py  test_otomatik_kesim_controller.py  test_page_index.py  test_vision_service.py
(+458 files in other folders)
